# abgx360gui-reloaded

./: .gitignore  CMakeLists.txt  abgx360gui.rc  build.py  build_deeps.py
src/: abgx360gui.cpp  abgx360gui.h
